@@ -4,8 +4,8 @@ Authors@R: c(
         person("Aaron", "Lun", role = c("aut", "cre"), email="infinite.monkeys.with.keyboards@gmail.com"),
         person("Davis", "McCarthy", role="aut")
     )
-Version: 1.9.2
-Date: 2022-11-18
+Version: 1.9.3
+Date: 2022-12-07
 License: GPL-3
 Title: Single-Cell RNA-Seq Analysis Utilities
 Description: 
